fix(ui/preview-full-size): fix same z-index as in screen

--- a/src/modules/ui/preview-full-size/preview-full-size.scss
+++ b/src/modules/ui/preview-full-size/preview-full-size.scss
@@ -2,7 +2,7 @@
 
 .container {
   position: absolute;
-  z-index: 50;
+  z-index: 55;
   top: 0;
   right: 0;
   bottom: 0;
